# Stairway_Mapping

./: README.md
fourlegs/: CMakeLists.txt  package.xml
fourlegs/include/: plane_detector.h  robotodom2.h  zslam.h
fourlegs/launch/: Zslam.launch  plane_detector.launch
fourlegs/src/plane_detector/: average.cpp  feet_pcl_reciver.cpp  get_plane_angle.cpp  get_plane_model.cpp  main.cpp  pcl_reciver.cpp  step_modeling_horizontal.cpp
fourlegs/src/robotodom2/: main.cpp  pcl_reciver.cpp
fourlegs/src/zslam/: main.cpp  pcl_reciver.cpp  tf_reciver.cpp
